# rocm-perf-lab

./: .gitignore  LICENSE  README.md  TEST_PLAN.md  VERSIONING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agent-skill/: SKILL.md
agent-skill/references/: autotune.md  cli.md  profiling.md
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  REPLAY.md  REPLAY_JSON_SCHEMA.md  ROOFLINE_DESIGN.md  TESTING.md  USER_GUIDE.md  WHITEPAPER.md
rocm_perf_lab/analysis/: att_analysis.py  bottleneck_classifier.py  critical_path.py  feature_engineering.py  optimization_score.py  pruning.py  regression.py
rocm_perf_lab/autotune/: __init__.py  tuner.py
rocm_perf_lab/cli/: main.py
rocm_perf_lab/hal/: base.py  cdna2.py  cdna3.py  detect.py  factory.py  rdna2.py  registry.py
rocm_perf_lab/isolate/tool/: CMakeLists.txt  hip_test  hip_test.cpp  isolate_output.json  isolate_tool.cpp
rocm_perf_lab/isolate/tool/rocm_compat/inc/: hsa_amd_tool.h  hsa_ext_amd.h  hsa_ext_finalize.h  hsa_ext_image.h  hsa_ven_amd_pc_sampling.h
rocm_perf_lab/llm/: agent_loop.py  patch_extractor.py  prompt_builder.py  schema.py
rocm_perf_lab/llm/providers/: openai_provider.py
rocm_perf_lab/optimization/: transform_loop_unroll.py  variant_manager.py
rocm_perf_lab/profiler/: att_runner.py  extended_pipeline.py  pipeline.py  rocpd_detector.py  rocprof_adapter.py  runner.py
rocm_perf_lab/replay/: CMakeLists.txt  replay.cpp  replay_full_vm.cpp  vm_reserve_only.cpp
rocm_perf_lab/schema/: profile.py
testbed/attention/: Makefile  attention.cu
testbed/softmax/: naive_softmax.cu
tests/: test_att_analysis.py  test_autotune_logic.py  test_cli.py  test_loop_unroll.py  test_profile_logic.py  test_profiler_pipeline_extra.py  test_schema.py  test_variant_manager.py
tests/critical_path/: __init__.py  test_cross_stream.py  test_parallel.py  test_serial.py  test_symbol_aggregation.py  utils.py
tests/integration/: golden_kernel.cpp  pointer_chase_kernel.cpp  test_minimal_replay.py  test_pointer_chase_replay.py
